# smu_sig_prossessing

./: .gitignore  README.md  calculate_niqe.py  generate_report.py  main.py  pyproject.toml  run_ablation.py  run_auto_eval.py  run_comprehensive_benchmark.py  run_multi_video_benchmark.py  run_optimization.py
docs/: explanations.md  reference.md
plan/: Implementation_Plan.md  Project_plan.md  design_change_log.md  iteration9_report.md  mid-project_report.md
scripts/: autonomous_improve.py  calculate_niqe.py  compare_presets.py  iter9_ablation.py  iter9_ablation_sweep.py  iter9_batch_eval.py  iter9_combos.py  iter9_combos2.py  iter9_compare.py  iter9_comparison_grid.py  iter9_focused_eval.py  iter9_sweep.py  iter9_verify.py  iter9_verify2.py  iter_loop.py  iteration4.py  pipeline.py  prep_test_img.py  run_auto_eval.py  run_batch_process.py  run_bm4d_sweep.py  run_evaluation.py  run_experiments.py  run_fast_benchmark.py  run_filter_interaction.py  run_filter_interaction_v2.py  run_filter_interaction_v3.py  run_full_ablation_sweep.py  run_multi_video_benchmark.py  run_pipeline.py  run_temporal_nlm_sweep.py  run_v32_benchmark.py  run_v33_benchmark.py  run_video.py  test_ntsc_ablation.py  test_washing.py  video_pipeline.py
smu_sig_prossessing/: __init__.py  __main__.py  adaptive.py  auto_evaluation.py  config.py  degradation.py  eval_viz.py  evaluation.py  filters.py  noise_estimation.py  noise_estimator.py  ntsc_plugin.py  pipeline.py
