[project]
name = "smu-sig-prossessing"
version = "4.0.0"
description = "아날로그 영상 잡음 완화 및 색 왜곡 보정 범용 파이프라인"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless",
    "scikit-image",
    "scipy",
    "numpy",
    "PyWavelets",
    "bm3d",
    "bm4d",
    "brisque",
]

[project.scripts]
smu-sig = "smu_sig_prossessing.__main__:main"
